# tree-sitter-snippet

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-snippet.h  tree-sitter-snippet.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_snippet/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterSnippetTests/: TreeSitterSnippetTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: snippet.txt
