[package]
name = "tree-sitter-snippet"
description = "A parser for LSP snippet syntax"
version = "0.1.0"
authors = ["Riley Bruins <ribru17@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "snippet"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-snippet"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.3"
